# skgl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/billboard/: main.cpp
examples/billboard/resources/shaders/: billboard.frag
examples/imgui_test/: main.cpp
examples/imgui_test/resources/shaders/: billboard.vert
examples/model/: main.cpp
examples/model/resources/shaders/: model.frag  model.fs  model.vert  model.vs
examples/texture/: main.cpp  main.hpp
examples/texture/resources/shaders/: texture.vert  texture.vs
headers/: billboard.hpp  camera.hpp  drawable.hpp  ebo.hpp  gl_buffer_objects.hpp  gl_object.hpp  light.hpp  log.hpp  material.hpp  mesh.hpp  model.hpp  shader.hpp  shapes.hpp  texture.hpp  vao.hpp  vbo.hpp  vertex.hpp  window.hpp
resources/shaders/: basic.fs  basic.vs
src/: camera.cpp  gl_buffer_objects.cpp  log.cpp  material.cpp  model.cpp  shader.cpp  shapes.cpp  texture.cpp  vao.cpp  window.cpp
